corrected login form

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
     <head>
-        <title>Chat App</title>
+        <title>Yasinskydew Chat App</title>
         <link rel="icon" href="./img/favicon.png">
         <link rel="stylesheet" href="./css/styles.min.css">
     </head>
@@ -11,9 +11,9 @@
                 <h1>Join</h1>
                 <form action="chat.html">
                     <label>Display name</label>
-                    <input type="text" name="username" placeholder="Display name" required>
+                    <input type="text" name="username" placeholder="Display name" autocomplete="off" required>
                     <label>Room</label>
-                    <input type="text" name="room" placeholder="Room" required>
+                    <input type="text" name="room" placeholder="Room" autocomplete="off" required>
                     <button>Join</button>
                 </form>
             </div>
